--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -14,7 +14,7 @@
           <%= link_to 'Crear cuenta', new_user_registration_path, class: 'nav-link mr-3' %>
         </li>
         <li class="nav-item">
-          <%= link_to 'Ingresar', new_user_session_path, class: 'nav-link btn btn-outline-dark text-info' %>
+          <%= link_to 'Ingresar', new_user_session_path, class: 'nav-link btn btn-outline-dark text-primary' %>
         </li>
       <% end %>
     </ul>
